--- a/gestione-libri/src/main/resources/application.properties
+++ b/gestione-libri/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 # ==============================================================
 spring.datasource.url jdbc:mysql://localhost:3306/springLibri?useUnicode=true&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username = root
-spring.datasource.password = password
+spring.datasource.password = 95asroma
 
 # ==============================================================
 # = Keep the connection alive if idle for a long time (needed in production)
@@ -29,7 +29,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 # ==============================================================
 # = Initialize the database using data.sql script
 # ==============================================================
-#spring.datasource.initialization-mode=always
+spring.datasource.initialization-mode=always
 
 logging.level.org.springframework.security=DEBUG
 server.error.whitelabel.enabled=false
